--- a/assets/sass/05-modules/ZZ-ANIMATION-MODULES/popins.scss
+++ b/assets/sass/05-modules/ZZ-ANIMATION-MODULES/popins.scss
@@ -1,6 +1,7 @@
 ﻿
-.popins {
-	&-piece { opacity: 0;
-		&--hasPopped { @include M-popin; }
+[data-jshook*="popins"] {
+	> * {
+		opacity: 0;
 	}
+	> .popins-item--isActivated { @include M-popin; }
 }
