added some commented out debugs so they're ready if you need them to help debug code

--- a/assets/sass/01-functions/00-functions.scss
+++ b/assets/sass/01-functions/00-functions.scss
@@ -7,6 +7,9 @@
 	//if it's a map, treat each setting in the map seperately
 	@if (type-of($defaultMap) == 'map' ){
 
+		//@debug $mapVariable;
+		//@debug $defaultMap;
+
 	    $finalParams: $mapVariable;
 
 	    // We iterate over each property of the defaultMap
@@ -19,6 +22,8 @@
 
 	        }
 	    }
+
+		//@debug $finalParams;
 
 	    @return $finalParams;
 
