changed arrow names to use double dash

--- a/assets/sass/00-config/fonts/icon-names.scss
+++ b/assets/sass/00-config/fonts/icon-names.scss
@@ -39,10 +39,10 @@ $icons: (
 	external: "\e60f",
 	twitter: "\e608",
 
-	arrow-down: "\e610",
-	arrow-left: "\e611",
-	arrow-right: "\e612",
-	arrow-up: "\e613",
+	arrow--down: "\e610",
+	arrow--left: "\e611",
+	arrow--right: "\e612",
+	arrow--up: "\e613",
 
 	facebook: "\e614",
 	fontsize: "\e615",
