--- a/assets/sass/02-mixins/08-animation-core.scss
+++ b/assets/sass/02-mixins/08-animation-core.scss
@@ -125,11 +125,44 @@
 //	Keyframe animations		//
 /////////////////////////////
 
+//calculates the percentages for the key frame generator
+@function keyframe_percent($index, $attribute_list){
+	@return (100% / (length($attribute_list) - 1)) * ($index - 1);
+	//@return (100% / 2)) * 1;
+}
+
+//generates evenly spaced key frames for an animation set
+@function kf_generator($animation_set){
+
+	$animation:	(0% (nth($animation_set, 1))),;
+
+	@for $i from 2 through (length($animation_set)) {
+			$animation_keyframe:
+					///*determines at what point in the animation the attributes take effect*/
+				(keyframe_percent($i, $animation_set)
+
+				///*adds the attributes to the keyframe*/
+				nth($animation_set, $i))
+			;
+
+			$animation: append($animation, $animation_keyframe, comma);
+	}
+	//@debug $animation; //uncomment if having issues with the generator*/
+	@return ($animation);
+}
+
+
 //analyses the animation set and generates the css rules for each key frame
 @mixin M-kf-animation-loop ($animation_set){
 	@include M-gt-ie8 {
 
+
+		@if (type-of(nth($animation_set,1)) == 'map'){
+			$animation_set: kf_generator($animation_set);
+		}
+
 		//can be useful for debugging
+		//@debug type-of(nth($animation_set,1));
 		//@debug $animation_set;
 
 		@each $frame in $animation_set {
@@ -157,13 +190,12 @@
 //Use this on it's own to set up an animation that is shared across multiple elements or multiple timings
 @mixin M-kf-definition($animation_name, $animation_set) {
 	@at-root(without: all) {
-	@include M-gt-ie8 {
-		@-webkit-keyframes #{$animation_name} {
-			//@include M-keyframes-loop($keyframes, $rules);
-			@include M-kf-animation-loop($animation_set);
-		}
-		@keyframes #{$animation_name} {
-			@include M-kf-animation-loop($animation_set);
+		@include M-gt-ie8 {
+			@-webkit-keyframes #{$animation_name} {
+				@include M-kf-animation-loop($animation_set);
+			}
+			@keyframes #{$animation_name} {
+				@include M-kf-animation-loop($animation_set);
 			}
 		}
 	}
@@ -211,52 +243,4 @@
 //}
 
 
-/////////////////////////////////
-//	Generate Equal key frames //
-///////////////////////////////
-
-//calculates the percentages for the key frame generator
-@function keyframe_percent($index, $attribute_list){
-	@return (100% / (length($attribute_list) - 1)) * ($index - 1);
-	//@return (100% / 2)) * 1;
-}
-
-//generates evenly spaced key frames for an animation set
-@function kf_generator($animation_set){
-
-	$animation:	(0% (nth($animation_set, 1))),;
-
-	@for $i from 2 through (length($animation_set)) {
-			$animation_keyframe:
-					///*determines at what point in the animation the attributes take effect*/
-				(keyframe_percent($i, $animation_set)
-
-				///*adds the attributes to the keyframe*/
-				nth($animation_set, $i))
-			;
-
-			$animation: append($animation, $animation_keyframe, comma);
-	}
-	//@debug $animation; //uncomment if having issues with the generator*/
-	@return ($animation);
-}
-
-//----------------------------------
-
-//EXAMPLE USAGE (single attribute):
-//(sorry about the ugliness but it works)
-
-//$example_animation:
-//	(scale: 0, opacity: 0),
-//	(scale: 1, opacity: 1),
-//	(scale: 0, opacity: 0)
-//;
-
-//#element {
-//		@include M-kf-animate(
-//			example_animation,
-//			kf_generator($example_animation),
-//			10s
-//		);
-//}
 
