--- a/assets/sass/02-mixins/08-animation-core.scss
+++ b/assets/sass/02-mixins/08-animation-core.scss
@@ -132,17 +132,17 @@
 }
 
 //generates evenly spaced key frames for an animation set
-@function kf_generator($animation_set){
+@function kf_generator($keyframes){
 
-	$animation:	(0% (nth($animation_set, 1))),;
+	$animation:	(0% (nth($keyframes, 1))),;
 
-	@for $i from 2 through (length($animation_set)) {
+	@for $i from 2 through (length($keyframes)) {
 			$animation_keyframe:
 					///*determines at what point in the animation the attributes take effect*/
-				(keyframe_percent($i, $animation_set)
+				(keyframe_percent($i, $keyframes)
 
 				///*adds the attributes to the keyframe*/
-				nth($animation_set, $i))
+				nth($keyframes, $i))
 			;
 
 			$animation: append($animation, $animation_keyframe, comma);
@@ -153,19 +153,19 @@
 
 
 //analyses the animation set and generates the css rules for each key frame
-@mixin M-kf-animation-loop ($animation_set){
+@mixin M-kf-animation-loop ($keyframes){
 	@include M-gt-ie8 {
 
 
-		@if (type-of(nth($animation_set,1)) == 'map'){
-			$animation_set: kf_generator($animation_set);
+		@if (type-of(nth($keyframes,1)) == 'map'){
+			$keyframes: kf_generator($keyframes);
 		}
 
 		//can be useful for debugging
-		//@debug type-of(nth($animation_set,1));
-		//@debug $animation_set;
+		//@debug type-of(nth($keyframes,1));
+		//@debug $keyframes;
 
-		@each $frame in $animation_set {
+		@each $frame in $keyframes {
 			$keyframe: nth($frame,1);
 			$css: nth($frame,2);
 
@@ -188,14 +188,14 @@
 
 //Sets up the key-frames for the animation
 //Use this on it's own to set up an animation that is shared across multiple elements or multiple timings
-@mixin M-kf-definition($animation_name, $animation_set) {
+@mixin M-kf-definition($name, $keyframes) {
 	@at-root(without: all) {
 		@include M-gt-ie8 {
-			@-webkit-keyframes #{$animation_name} {
-				@include M-kf-animation-loop($animation_set);
+			@-webkit-keyframes #{$name} {
+				@include M-kf-animation-loop($keyframes);
 			}
-			@keyframes #{$animation_name} {
-				@include M-kf-animation-loop($animation_set);
+			@keyframes #{$name} {
+				@include M-kf-animation-loop($keyframes);
 			}
 		}
 	}
@@ -204,19 +204,19 @@
 //Defines how the animation plays out
 //use this on it's own to call on animations made with the kf-definition mixin
 //This mixin allows you to use the same animation set as another element but give different timings
-@mixin M-kf-predefined($animation_name, $settings: 1s, $loops: infinite, $ease: linear, $fill: both){
+@mixin M-kf-predefined($name, $timing: 1s, $loops: infinite, $ease: linear, $fill: both){
 	@include M-gt-ie8 {
-		-webkit-animation: $animation_name $settings $loops $ease $fill; //* Safari 4+ */
-		animation:         $animation_name $settings $loops $ease $fill; //* IE 10+, Fx 29+ */
+		-webkit-animation: $name $timing $loops $ease $fill; //* Safari 4+ */
+		animation:         $name $timing $loops $ease $fill; //* IE 10+, Fx 29+ */
 
 	}
 }
 
 //Ties all the key-frame animation mixins together into a single easy to use mixin
-@mixin M-kf-animate($animation_name, $animation_set, $settings: 1s, $loops: infinite, $ease: linear, $fill: both) {
+@mixin M-kf-animate($name, $keyframes, $timing: 1s, $loops: infinite, $ease: linear, $fill: both) {
 	@include M-gt-ie8 {
-		@include M-kf-definition($animation_name, $animation_set);
-		@include M-kf-predefined($animation_name, $settings, $loops, $ease, $fill);
+		@include M-kf-definition($name, $keyframes);
+		@include M-kf-predefined($name, $timing, $loops, $ease, $fill);
 	}
 }
 
