--- a/assets/sass/04-base/TK-toolkit.scss
+++ b/assets/sass/04-base/TK-toolkit.scss
@@ -77,6 +77,7 @@
 		@include M-animate;
 		&--medium { @include M-animate(0.5s); }//useful for hover states
 		&--slow { @include M-animate(1s); }
+		&--false { @include M-anti-animate; }
 	}
 
 	//quickly add position relative to an element
