made effects file more portable by setting $main-sheet to true by default

--- a/assets/sass/02-mixins/09-animation-effects.scss
+++ b/assets/sass/02-mixins/09-animation-effects.scss
@@ -2,6 +2,7 @@
 /*   SHARED ANIMATION EFFECTS   */
 /////////////////////////////////
 
+$main-sheet: true !default;
 
 /*******************************************\
 	RUMBLE EFFECT
