switched SASS to using underscores

--- a/assets/sass/04-base/form-elements/browse-btn.scss
+++ b/assets/sass/04-base/form-elements/browse-btn.scss
@@ -33,7 +33,7 @@ input[type="file"] {
 			cursor: pointer;
 			visibility: visible;
 		}
-		&-preview {
+		&__preview {
 			line-height: 2.1em;
 			float: left;
 		}
