--- a/assets/sass/04-base/structure/display-table.scss
+++ b/assets/sass/04-base/structure/display-table.scss
@@ -3,10 +3,10 @@
 
 .table {
 	display: table;
-	&-row {
+	&__row {
 		display: table-row;
 	}
-		&-cell {
+		&__cell {
 			display: table-cell;
 		}
 }
