--- a/assets/sass/05-modules/siteHeader/navPrimary.scss
+++ b/assets/sass/05-modules/siteHeader/navPrimary.scss
@@ -2,13 +2,13 @@
 $module: 'navPrimary';
 
 .navPrimary {
-	&-list {
+	&__list {
 		//
 	}
-		&-item {
+		&__item {
 			//
 		}
-			&-link {
+			&__link {
 				//
 
 				@include M-hover {
