--- a/assets/sass/02-mixins/03-shortcuts.scss
+++ b/assets/sass/02-mixins/03-shortcuts.scss
@@ -335,3 +335,57 @@
 		@content;
 	}
 }
+
+
+@mixin M-overflowShadow ($direction: h, $bg: #fff, $shadow: $CB-grey-dark, $shadowSize: 20px, $baseSize: 11 * $shadowSize){
+
+	$start: left;
+	$end: right;
+
+	$sizeBase: $baseSize 100%;
+	$sizeShadow: $shadowSize 100%;
+
+	$posStart: 0 0;
+	$posEnd: 100% 0;
+
+	$axis : x;
+
+	@if ($direction == 'v'){
+		$start: top;
+		$end: bottom;
+
+		$sizeBase: 100% $baseSize;
+		$sizeShadow: 100% $shadowSize;
+
+		$posEnd: 0 100%;
+
+		$axis : y;
+	} @else if ($direction != 'h'){
+		@error "direction (#{$direction}) must be either 'h' (horizontal) or 'v' (vertical)";
+	}
+
+	overflow-#{$axis}: auto;
+
+	@include M-gt-ie8 {
+		//adds the shadow to the table
+		$prefixes: webkit, moz, o;
+		@each $prefix in $prefixes {
+			background-image:
+				-#{$prefix}-linear-gradient($start, $bg, rgba($bg, 0)),
+				-#{$prefix}-linear-gradient($end, $bg, rgba($bg, 0)),
+				-#{$prefix}-linear-gradient($start, $shadow, rgba($shadow, 0)),
+				-#{$prefix}-linear-gradient($end, $shadow, rgba($shadow, 0));
+		}
+		background-image:
+			linear-gradient($start, $bg, rgba($bg, 0)),
+			linear-gradient($end, $bg, rgba($bg, 0)),
+			linear-gradient($start, $shadow, rgba($shadow, 0)),
+			linear-gradient($end, $shadow, rgba($shadow, 0));
+
+		background-position: $posStart, $posEnd, $posStart, $posEnd;
+		background-repeat: no-repeat;
+		background-color: $bg;
+		background-size: $sizeBase, $sizeBase, $sizeShadow, $sizeShadow;
+		background-attachment: local, local, scroll, scroll;
+	}
+}
