updated form styles attatched to JS classes

--- a/assets/sass/04-base/form-elements/02-submit.scss
+++ b/assets/sass/04-base/form-elements/02-submit.scss
@@ -7,7 +7,7 @@
 	.js &.styledSubmit { @include M-opacity(0); }
 }
 
-.styledSubmit {
+.styledSubmit-JS {
 	position: relative;
 	cursor: pointer;
 	input[type="submit"] {
