Removed 3D bit from M-animate
it can easily be added with @include M-3D; it was just overcomplicating the mixin

--- a/assets/sass/02-mixins/08-animation-core.scss
+++ b/assets/sass/02-mixins/08-animation-core.scss
@@ -26,7 +26,7 @@ $lt-ie9: false !default;
 ));
 */
 //basic animation
-@mixin M-animate($settings: 0.2s, $ease: ease-in-out, $attributes: all, $style: flat){
+@mixin M-animate($settings: 0.2s, $ease: ease-in-out, $attributes: all){
 	@if (not $lt-ie9) {
 
 		$rule: ();
@@ -86,10 +86,6 @@ $lt-ie9: false !default;
 
 	    -webkit-transition: $rule;
 	    transition: $rule;
-
-		@if ($style == '3D'){
-			@include M-3d;
-		}
 	}
 }
 
