Added search icon to the icon font

--- a/assets/sass/00-config/fonts/icon-names.scss
+++ b/assets/sass/00-config/fonts/icon-names.scss
@@ -30,6 +30,7 @@
 
 //list of icon names and they're reference keys
 $icons: (
+	search: "\e617",
 	spinner: "\e609",
 	star--empty: "\e60a",
 	star--half: "\e60b",
