added a vAlign setting for individual grid cells

--- a/assets/sass/04-base/structure/00-grid-base-styles.scss
+++ b/assets/sass/04-base/structure/00-grid-base-styles.scss
@@ -123,6 +123,10 @@
 				@include M-flexForceWidth($width);
 			}
 		}
+
+		&--vAlign {
+			@include M-prefix(align-self, center, $flexPrefixes);
+		}
 	}
 
 //base grid__inner styling
