--- a/assets/sass/02-mixins/06-gradients.scss
+++ b/assets/sass/02-mixins/06-gradients.scss
@@ -35,7 +35,7 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 //	Standard Gradient
 //*********************/
 
-@mixin M-grad($gradColour1, $gradColour2,$type: v, $stop1: 0%, $stop2: 100%, $backup: mix($gradColour1, $gradColour2)){
+@mixin M-grad($gradColour1, $gradColour2, $type: v, $backup: mix($gradColour1, $gradColour2)){
 
 	background: $backup;
 
@@ -45,8 +45,8 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 		//vertical (|)
 		@if ($type == v){
 			@if ($lt-ie9 == false){
-				background: -webkit-linear-gradient(top,  $gradColour1 $stop1,$gradColour2 $stop2);
-				background: linear-gradient(to bottom,  $gradColour1 $stop1,$gradColour2 $stop2);
+				background: -webkit-linear-gradient(top,  $gradColour1, $gradColour2);
+				background: linear-gradient(to bottom,  $gradColour1, $gradColour2);
 			} @else {
 			   @include M-ie-grad($gradColour1, $gradColour2,v);
 			}
@@ -56,8 +56,8 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 		//horizontal (-)
 		@if ($type == h){
 			@if ($lt-ie9 == false){
-				background: -webkit-linear-gradient(left,  $gradColour1 $stop1,$gradColour2 $stop2);
-				background: linear-gradient(to right,  $gradColour1 $stop1,$gradColour2 $stop2);
+				background: -webkit-linear-gradient(left,  $gradColour1, $gradColour2);
+				background: linear-gradient(to right,  $gradColour1, $gradColour2);
 			} @else {
 			   @include M-ie-grad($gradColour1, $gradColour2,h);
 
@@ -66,51 +66,46 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 
 		@if ($lt-ie9 == false){
 			@if (type-of($type) == 'number'){
-				background: -webkit-linear-gradient($type, $gradColour1 $stop1,$gradColour2 $stop2);
-				background: linear-gradient($type, $gradColour1 $stop1,$gradColour2 $stop2);
+				background: -webkit-linear-gradient($type, $gradColour1,$gradColour2);
+				background: linear-gradient($type, $gradColour1,$gradColour2);
 			} @else {
 				//Diagonal down (\)
 				@if ($type == d-down){
-					background: -webkit-linear-gradient(135deg,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: linear-gradient(135deg,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-linear-gradient(135deg,  $gradColour1,$gradColour2);
+					background: linear-gradient(135deg,  $gradColour1,$gradColour2);
 				}
 
 				//Diagonal up (/)
 				@if ($type == d-up){
-					background: -webkit-linear-gradient(45deg,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: linear-gradient(45deg,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-linear-gradient(45deg,  $gradColour1,$gradColour2);
+					background: linear-gradient(45deg,  $gradColour1,$gradColour2);
 				}
 
 
 				//Radial (o)
 				@if ($type == r) {
-					background: -webkit-gradient(radial, center center, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: -webkit-radial-gradient(center, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: radial-gradient(ellipse at center,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-radial-gradient(center, ellipse cover,  $gradColour1,$gradColour2);
+					background: radial-gradient(ellipse at center,  $gradColour1,$gradColour2);
 				}
 
 				@if ($type == r-top-left) {
-					background: -webkit-gradient(radial,top left, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: -webkit-radial-gradient(top left, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: radial-gradient(ellipse at top left,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-radial-gradient(top left, ellipse cover,  $gradColour1,$gradColour2);
+					background: radial-gradient(ellipse at top left,  $gradColour1,$gradColour2);
 				}
 
 				@if ($type == r-top-right) {
-					background: -webkit-gradient(radial,top right, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: -webkit-radial-gradient(top right, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: radial-gradient(ellipse at top right,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-radial-gradient(top right, ellipse cover,  $gradColour1,$gradColour2);
+					background: radial-gradient(ellipse at top right,  $gradColour1,$gradColour2);
 				}
 
 				@if ($type == r-bottom-right) {
-					background: -webkit-gradient(radial,bottom right, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: -webkit-radial-gradient(bottom right, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: radial-gradient(ellipse at bottom right,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-radial-gradient(bottom right, ellipse cover,  $gradColour1,$gradColour2);
+					background: radial-gradient(ellipse at bottom right,  $gradColour1,$gradColour2);
 				}
 
 				@if ($type == r-bottom-left) {
-					background: -webkit-gradient(radial,bottom left, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: -webkit-radial-gradient(bottom left, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: radial-gradient(ellipse at bottom left,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: -webkit-radial-gradient(bottom left, ellipse cover,  $gradColour1,$gradColour2);
+					background: radial-gradient(ellipse at bottom left,  $gradColour1,$gradColour2);
 				}
 			}
 		}//end lt-ie9 check
@@ -122,7 +117,6 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 //************************************\
 //	Gradient with more than 2 colours
 //************************************/
-//won't work in as many browsers as the standard gradient mixin
 
 //Usage:
 //$grad-colours: #fff 0%, #ccc 50%, #000 100%;
@@ -205,22 +199,22 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 //modern browsers only (IE10+)
 //currently only designed to work with the manual sprite
 
-@mixin M-img-grad($img-position, $gradColour1, $gradColour2, $type: v, $stop1:0%, $stop2: 100%, $backup: mix($gradColour1, $gradColour2), $image: $manual_sprite, $retina_img: $manual_sprite2x, $bgSize: $manual_sprite_width auto){
+@mixin M-img-grad($img-position, $gradColour1, $gradColour2, $type: v, $backup: mix($gradColour1, $gradColour2), $image: $manual_sprite, $retina_img: $manual_sprite2x, $bgSize: $manual_sprite_width auto){
 
 	background: $backup;
 
-	@if (type-of($type) == 'number' or contains($validStrings,$type)){
+	@if (type-of($type) == 'number' or contains($validStrings, $type)){
 
 		@if ($lt-ie9 == false){
 
 			@if (type-of($type) == 'number'){
 				@if (unit($type) == 'deg'){
-					background: $image, -webkit-linear-gradient($type,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, linear-gradient($type,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-linear-gradient($type,  $gradColour1,$gradColour2);
+					background: $image, linear-gradient($type,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-linear-gradient($type,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, linear-gradient($type,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-linear-gradient($type,  $gradColour1,$gradColour2);
+						background: $retina_img, linear-gradient($type,  $gradColour1,$gradColour2);
 					}
 				} @else {
 					@warn errorMessage($type);
@@ -229,115 +223,97 @@ $validStrings: v, h, d-down, d-up, r, r-top-left, r-top-right, r-bottom-left, r-
 
 				//vertical (|)
 				@if ($type == v){
-					background: $image, -webkit-gradient(linear, left top, left bottom, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-linear-gradient(top,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, linear-gradient(to bottom,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-linear-gradient(top,  $gradColour1,$gradColour2);
+					background: $image, linear-gradient(to bottom,  $gradColour1,$gradColour2);
 
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(linear, left top, left bottom, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-linear-gradient(top,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, linear-gradient(to bottom,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-linear-gradient(top,  $gradColour1,$gradColour2);
+						background: $retina_img, linear-gradient(to bottom,  $gradColour1,$gradColour2);
 					}
 				}
 
 				//horizontal (-)
 				@if ($type == h){
-					background: $image, -webkit-gradient(linear, left top, right top, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-linear-gradient(left,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, linear-gradient(to right,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-linear-gradient(left,  $gradColour1,$gradColour2);
+					background: $image, linear-gradient(to right,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(linear, left top, right top, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-linear-gradient(left,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, linear-gradient(to right,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-linear-gradient(left,  $gradColour1,$gradColour2);
+						background: $retina_img, linear-gradient(to right,  $gradColour1,$gradColour2);
 					}
 				}
 
 				//Diagonal down (\)
 				@if ($type == d-down){
-					background: $image, -webkit-gradient(linear, left top, right bottom, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-linear-gradient(135deg,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, linear-gradient(135deg,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-linear-gradient(135deg,  $gradColour1,$gradColour2);
+					background: $image, linear-gradient(135deg,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(linear, left top, right top, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-linear-gradient(135deg,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, linear-gradient(135deg,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-linear-gradient(135deg,  $gradColour1,$gradColour2);
+						background: $retina_img, linear-gradient(135deg,  $gradColour1,$gradColour2);
 					}
 				}
 
 				//Diagonal up (/)
 				@if ($type == d-up){
-					background: $image, -webkit-gradient(linear, left bottom, right top, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-linear-gradient(45deg,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, linear-gradient(45deg,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-linear-gradient(45deg,  $gradColour1,$gradColour2);
+					background: $image, linear-gradient(45deg,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(linear, left bottom, right top, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-linear-gradient(45deg,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, linear-gradient(45deg,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-linear-gradient(45deg,  $gradColour1,$gradColour2);
+						background: $retina_img, linear-gradient(45deg,  $gradColour1,$gradColour2);
 					}
 				}
 
 				//Radial (o)
 				@if ($type == r) {
-					background: $image, -webkit-gradient(radial, center center, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-radial-gradient(center, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, radial-gradient(ellipse at center,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-radial-gradient(center, ellipse cover,  $gradColour1,$gradColour2);
+					background: $image, radial-gradient(ellipse at center,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(radial, center center, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-radial-gradient(center, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, radial-gradient(ellipse at center,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-radial-gradient(center, ellipse cover,  $gradColour1,$gradColour2);
+						background: $retina_img, radial-gradient(ellipse at center,  $gradColour1,$gradColour2);
 					}
 				}
 
 				@if ($type == r-top-left) {
-					background: $image, -webkit-gradient(radial,top left, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-radial-gradient(top left, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, radial-gradient(ellipse at top left,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-radial-gradient(top left, ellipse cover,  $gradColour1,$gradColour2);
+					background: $image, radial-gradient(ellipse at top left,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(radial,top left, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-radial-gradient(top left, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, radial-gradient(ellipse at top left,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-radial-gradient(top left, ellipse cover,  $gradColour1,$gradColour2);
+						background: $retina_img, radial-gradient(ellipse at top left,  $gradColour1,$gradColour2);
 					}
 				}
 
 				@if ($type == r-top-right) {
-					background: $image, -webkit-gradient(radial,top right, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-radial-gradient(top right, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, radial-gradient(ellipse at top right,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-radial-gradient(top right, ellipse cover,  $gradColour1,$gradColour2);
+					background: $image, radial-gradient(ellipse at top right,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(radial,top right, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-radial-gradient(top right, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, radial-gradient(ellipse at top right,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-radial-gradient(top right, ellipse cover,  $gradColour1,$gradColour2);
+						background: $retina_img, radial-gradient(ellipse at top right,  $gradColour1,$gradColour2);
 					}
 				}
 
 				@if ($type == r-bottom-right) {
-					background: $image, -webkit-gradient(radial,bottom right, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-radial-gradient(bottom right, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, radial-gradient(ellipse at bottom right,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-radial-gradient(bottom right, ellipse cover,  $gradColour1,$gradColour2);
+					background: $image, radial-gradient(ellipse at bottom right,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(radial,bottom right, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-radial-gradient(bottom right, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, radial-gradient(ellipse at bottom right,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-radial-gradient(bottom right, ellipse cover,  $gradColour1,$gradColour2);
+						background: $retina_img, radial-gradient(ellipse at bottom right,  $gradColour1,$gradColour2);
 					}
 				}
 
 				@if ($type == r-bottom-left) {
-					background: $image, -webkit-gradient(radial,bottom left, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-					background: $image, -webkit-radial-gradient(bottom left, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-					background: $image, radial-gradient(ellipse at bottom left,  $gradColour1 $stop1,$gradColour2 $stop2);
+					background: $image, -webkit-radial-gradient(bottom left, ellipse cover,  $gradColour1,$gradColour2);
+					background: $image, radial-gradient(ellipse at bottom left,  $gradColour1,$gradColour2);
 
 					@include M-retina {
-						background: $retina_img, -webkit-gradient(radial,bottom left, 0px, center center, $stop2, color-stop($stop1,$gradColour1), color-stop($stop2,$gradColour2));
-						background: $retina_img, -webkit-radial-gradient(bottom left, ellipse cover,  $gradColour1 $stop1,$gradColour2 $stop2);
-						background: $retina_img, radial-gradient(ellipse at bottom left,  $gradColour1 $stop1,$gradColour2 $stop2);
+						background: $retina_img, -webkit-radial-gradient(bottom left, ellipse cover,  $gradColour1,$gradColour2);
+						background: $retina_img, radial-gradient(ellipse at bottom left,  $gradColour1,$gradColour2);
 					}
 				}
 
