--- a/assets/sass/02-mixins/02-css3-shortening.scss
+++ b/assets/sass/02-mixins/02-css3-shortening.scss
@@ -63,3 +63,27 @@ $lt-ie9: false !default;
 //scale 1 and 0 are the most commonly used values
 %scale-1 { @include M-scale(1); }
 %scale-0 { @include M-scale(0); }
+
+//CSS3 element skew
+@mixin M-scale ($skew: -45deg,$origin: center) {
+	@if ($lt-ie9 == false){
+		-webkit-transform: skew($skew);
+			-ms-transform: skew($skew);
+				transform: skew($skew);
+
+		@if ($origin != center) {
+			@include M-origin($origin);
+		}
+	}
+}
+
+//To help with prefixes
+@mixin M-transform ($transformations, $origin: center){
+		-webkit-transform: $transformations;
+			-ms-transform: $transformations;
+				transform: $transformations;
+
+		@if ($origin != center) {
+			@include M-origin($origin);
+		}
+}
